samples/_failures_safe/1761554905_d7cb96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95c6209f.c: In function ‘main’:
./samples/SAFE/__tmp_95c6209f.c:166:20: error: missing terminating " character
  166 |             printf("Reached
      |                    ^~~~~~~~
./samples/SAFE/__tmp_95c6209f.c:166:13: error: expected expression at end of input
  166 |             printf("Reached
      |             ^~~~~~
./samples/SAFE/__tmp_95c6209f.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95c6209f.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95c6209f.c:166:13: error: expected declaration or statement at end of input
